--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,5 +1,4 @@
-<%- include('includes/head') %> 
-<%- include('includes/nav') %>
+<%- include('includes/head') %> <%- include('includes/nav') %>
 
 <div class="container">
   <div class="row">
@@ -17,7 +16,7 @@
           <p>Se você ainda não tem conta, preencha o formulário abaixo:</p>
 
           <form class="form-cadastro" action="/login/register" method="POST">
-            <input type="hidden" name="_csrf" value="<%" ="csrfToken" % />>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
             <div class="form-group">
               <label>Seu e-mail</label>
               <input type="email" class="form-control" name="email" />
@@ -38,7 +37,7 @@
           <p>Se você já tem uma conta, faça login abaixo:</p>
 
           <form class="form-login" action="/login/login" method="POST">
-            <input type="hidden" name="_csrf" value="<%" ="csrfToken" % />>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
             <div class="form-group">
               <label>Seu e-mail</label>
               <input type="email" class="form-control" name="email" />
